# MessagerQT

./: .gitignore  CMakeLists.txt  QTMessager.pro  chatunit.cpp  chatunit.h  dialog.h  dialog.ui  main.cpp
build-QTMessager-Desktop_Qt_5_11_1_clang_64bit-Debug/: .qmake.stash  Makefile  moc_dialog.cpp
build-QTMessager-Desktop_Qt_5_11_1_clang_64bit-Debug/QTMessager.app/Contents/: Info.plist
build-QTMessager-Desktop_Qt_5_11_1_clang_64bit-Debug/QTMessager.app/Contents/MacOS/: QTMessager
chatunit/: ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  ChatUnit.cpp  ChatUnit.h  IUnit.h
entity/: Client.cpp  Client.h  Request.cpp  Request.h  Response.cpp  Response.h
entity/requests/: GetClientsRequest.cpp  GetClientsRequest.h  MessageRequest.h
entity/responces/: GetClientsResponse.cpp  GetClientsResponse.h  MessageResponse.cpp  MessageResponse.h
gorb/: .gitignore  QTMessager.pro  main.cpp
gorb/GUI/Presenter/: Presenter.cpp  Presenter.cpp.autosave  Presenter.h
gorb/GUI/formsUi/: ConnectDialog.ui  MainWindow.ui  ToolsDialog.ui
gorb/GUI/implement/: ConnectDialog.cpp  ConnectDialog.h  MainWindow.cpp  MainWindow.h  ToolsDialog.cpp  ToolsDialog.h
gorb/chatunit/: ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  ChatUnit.cpp  ChatUnit.h
gorb/entity/: Request.cpp
gorb/entity/requests/: GetClientsRequest.h  MessageRequest.cpp
gorb/entity/responces/: GetClientsResponse.cpp  GetClientsResponse.h
gorb/request_executors/: GetClientsExeutor.cpp  GetClientsExeutor.h  IRequestExecutor.cpp
request_executors/: GetClientsExeutor.cpp  GetClientsExeutor.h  IRequestExecutor.cpp  IRequestExecutor.h  MessageExecutor.cpp  MessageExecutor.h  RequestExecutor.cpp  RequestExecutor.h
testServer/Client/: main.cpp  testClient.cpp  testClient.h
testServer/Server/: main.cpp  testServer.cpp  testServer.h
